# execution-core-adapters

./: CMakeLists.txt  LICENSE  README.md
execution_adapters/: CMakeLists.txt  execution_adapters.cpp  execution_adapters.hpp
execution_core/: CMakeLists.txt  awaiters.hpp  execution_core.hpp  scheduler.cpp  scheduler.hpp  task.cpp  task.hpp
